Sec9_Chap100-XX: optimized code